[package]
name = "truston"
version = "0.1.0"
edition = "2024"
authors = ["Haidhi Angkawijana haidhiangkawijana@gmail.com"]
keywords = ["triton", "inference", "ai", "ml", "rust"]
categories = ["api-bindings", "science", "machine-learning"]

[dependencies]
async-trait = "0.1.89"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
