[package]
name = "truston"
version = "0.1.0"
edition = "2024"
authors = ["Haidhi Angkawijana haidhiangkawijana@gmail.com"]
keywords = ["triton", "inference", "ai", "ml", "rust"]
categories = ["api-bindings", "science", "machine-learning"]

[dependencies]
async-trait = "0.1.89"
ndarray = "0.16.1"
num-traits = "0.2.19"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
